--- a/games/jigsaw.html
+++ b/games/jigsaw.html
@@ -226,137 +226,233 @@
     </style>
 </head>
 <body>
-  <div class="container">
-      <div class="controls">
-          <button class="button" onclick="initializePuzzle()">New Puzzle</button>
-          <button class="button" onclick="switchImage()">Change Image</button>
-          <button class="button" onclick="changeGridSize()">Change Grid Size</button>
-          <label for="fileInput" class="upload-label">Upload Image</label>
-          <input type="file" id="fileInput" class="file-input" accept="image/*" onchange="uploadImage(event)">
+    <!-- Existing body content -->
+      <div class="container">
+          <div class="game-header">
+              <h1 class="game-title">Jigsaw Puzzle</h1>
+              <div class="game-stats">
+                  <div id="moveCounter">Moves: 0</div>
+                  <div id="timer">Time: 00:00</div>
+              </div>
+          </div>
+  
+          <div class="controls">
+              <button class="button" onclick="initializePuzzle()">New Puzzle</button>
+              <button class="button" onclick="switchImage()">Change Image</button>
+              <button class="button" onclick="showDifficultySelector()">Change Difficulty</button>
+              <label for="fileInput" class="upload-label">Upload Image</label>
+              <input type="file" id="fileInput" class="file-input" accept="image/*" onchange="uploadImage(event)">
+          </div>
+  
+          <div class="puzzle-container">
+              <div class="puzzle-grid" id="puzzleGrid"></div>
+          </div>
+  
+          <div class="complete-message" id="completeMessage">
+              🎉 Congratulations! Puzzle Complete! 🎉
+              <div id="completionStats"></div>
+          </div>
       </div>
-
-      <div class="puzzle-container">
-          <div class="puzzle-grid" id="puzzleGrid"></div>
+  
+      <div class="modal-overlay" id="modalOverlay"></div>
+      <div class="difficulty-selector" id="difficultySelector">
+          <button class="difficulty-button" onclick="setDifficulty(2)">Easy (2x2)</button>
+          <button class="difficulty-button" onclick="setDifficulty(3)">Medium (3x3)</button>
+          <button class="difficulty-button" onclick="setDifficulty(4)">Hard (4x4)</button>
+          <button class="difficulty-button" onclick="setDifficulty(5)">Expert (5x5)</button>
+          <button class="difficulty-button" onclick="hideDifficultySelector()">Cancel</button>
       </div>
-
-      <div class="complete-message" id="completeMessage">
-          Congratulations! Puzzle Complete! 🎉
-      </div>
-  </div>
-
-  <script>
-      let gridSize = 4;
-      let pieces = [];
-      let selectedPiece = null;
-      let currentImage = 0;
-
-      const puzzleImages = [
-          "https://www.maximumraw.com/games/noahsark.jpeg",
-          "https://www.maximumraw.com/games/dubai.jpeg"
-      ];
-      let uploadedImage = null;
-
-      function createPieces() {
-          pieces = [];
-          const totalPieces = gridSize * gridSize;
-          for (let i = 0; i < totalPieces; i++) {
-              pieces.push({
-                  id: i,
-                  currentPos: i,
-                  correctPos: i,
-              });
+  
+      <script>
+          let gridSize = 3;
+          let pieces = [];
+          let selectedPiece = null;
+          let currentImage = 0;
+          let uploadedImage = null;
+          let imageAspectRatio = 1;
+          let moveCount = 0;
+          let startTime = null;
+          let timerInterval = null;
+  
+          const puzzleImages = [
+              "https://www.maximumraw.com/games/noahsark.jpeg",
+              "https://www.maximumraw.com/games/dubai.jpeg"
+          ];
+  
+          function updateStats() {
+              document.getElementById('moveCounter').textContent = `Moves: ${moveCount}`;
+              if (startTime) {
+                  const elapsed = Math.floor((Date.now() - startTime) / 1000);
+                  const minutes = Math.floor(elapsed / 60).toString().padStart(2, '0');
+                  const seconds = (elapsed % 60).toString().padStart(2, '0');
+                  document.getElementById('timer').textContent = `Time: ${minutes}:${seconds}`;
+              }
           }
-          return pieces;
-      }
-
-      function shufflePieces() {
-          return [...pieces].sort(() => Math.random() - 0.5);
-      }
-
-      function initializePuzzle() {
-          pieces = createPieces();
-          pieces = shufflePieces();
-          pieces.forEach((piece, index) => (piece.currentPos = index));
-          renderPuzzle();
-          document.getElementById("completeMessage").style.display = "none";
-      }
-
-      function renderPuzzle() {
-          const grid = document.getElementById("puzzleGrid");
-          grid.style.gridTemplateColumns = `repeat(${gridSize}, 1fr)`;
-          grid.innerHTML = "";
-
-          pieces.forEach((piece) => {
-              const pieceElement = document.createElement("div");
-              pieceElement.className = "puzzle-piece";
-              pieceElement.style.order = piece.currentPos;
-
-              const imageUrl = uploadedImage || puzzleImages[currentImage];
-              pieceElement.style.backgroundImage = `url(${imageUrl})`;
-
-              // Adjust background size and position
-              const sizePercentage = 100 * gridSize;
-              const x = (piece.correctPos % gridSize) * (100 / (gridSize - 1));
-              const y = Math.floor(piece.correctPos / gridSize) * (100 / (gridSize - 1));
-
-              pieceElement.style.backgroundSize = `${sizePercentage}% ${sizePercentage}%`;
-              pieceElement.style.backgroundPosition = `${x}% ${y}%`;
-              pieceElement.style.aspectRatio = "1"; // Keep pieces square
-
-              pieceElement.addEventListener("click", () => handlePieceClick(piece));
-              grid.appendChild(pieceElement);
-          });
-      }
-
-      function handlePieceClick(clickedPiece) {
-          if (selectedPiece === null) {
-              selectedPiece = clickedPiece;
-          } else if (selectedPiece !== clickedPiece) {
-              swapPieces(selectedPiece, clickedPiece);
-              selectedPiece = null;
-              checkCompletion();
+  
+          function startTimer() {
+              if (timerInterval) clearInterval(timerInterval);
+              startTime = Date.now();
+              timerInterval = setInterval(updateStats, 1000);
           }
-      }
-
-      function swapPieces(pieceA, pieceB) {
-          const tempPos = pieceA.currentPos;
-          pieceA.currentPos = pieceB.currentPos;
-          pieceB.currentPos = tempPos;
-          renderPuzzle();
-      }
-
-      function checkCompletion() {
-          const isComplete = pieces.every((piece) => piece.currentPos === piece.correctPos);
-          if (isComplete) {
-              document.getElementById("completeMessage").style.display = "block";
+  
+          function stopTimer() {
+              if (timerInterval) {
+                  clearInterval(timerInterval);
+                  timerInterval = null;
+              }
           }
-      }
-
-      function switchImage() {
-          currentImage = (currentImage + 1) % puzzleImages.length;
-          uploadedImage = null;
-          initializePuzzle();
-      }
-
-      function changeGridSize() {
-          const newSize = prompt("Enter new grid size (2-10):", gridSize);
-          gridSize = Math.max(2, Math.min(10, parseInt(newSize, 10)));
-          initializePuzzle();
-      }
-
-      function uploadImage(event) {
-          const file = event.target.files[0];
-          if (file) {
-              const reader = new FileReader();
-              reader.onload = (e) => {
-                  uploadedImage = e.target.result;
-                  initializePuzzle();
-              };
-              reader.readAsDataURL(file);
+  
+          function createPieces() {
+              pieces = [];
+              const totalPieces = gridSize * gridSize;
+              for (let i = 0; i < totalPieces; i++) {
+                  pieces.push({
+                      id: i,
+                      currentPos: i,
+                      correctPos: i,
+                  });
+              }
+              return pieces;
           }
-      }
+  
+          function shufflePieces() {
+              let shuffled = [...pieces];
+              do {
+                  shuffled.sort(() => Math.random() - 0.5);
+              } while (!isSolvable(shuffled));
+              return shuffled;
+          }
+  
+          function isSolvable(arrangement) {
+              let inversions = 0;
+              for (let i = 0; i < arrangement.length - 1; i++) {
+                  for (let j = i + 1; j < arrangement.length; j++) {
+                      if (arrangement[i].correctPos > arrangement[j].correctPos) {
+                          inversions++;
+                      }
+                  }
+              }
+              return inversions % 2 === 0;
+          }
+  
+          function initializePuzzle() {
+              moveCount = 0;
+              pieces = createPieces();
+              pieces = shufflePieces();
+              pieces.forEach((piece, index) => (piece.currentPos = index));
+              renderPuzzle();
+              document.getElementById("completeMessage").style.display = "none";
+              startTimer();
+              updateStats();
+          }
 
-      window.onload = initializePuzzle;
-  </script>
+          function renderPuzzle() {
+            const grid = document.getElementById("puzzleGrid");
+            grid.style.gridTemplateColumns = `repeat(${gridSize}, 1fr)`;
+            grid.innerHTML = "";
+
+            pieces.forEach((piece) => {
+                const pieceElement = document.createElement("div");
+                pieceElement.className = "puzzle-piece";
+                pieceElement.style.order = piece.currentPos;
+
+                const imageUrl = uploadedImage || puzzleImages[currentImage];
+                pieceElement.style.backgroundImage = `url(${imageUrl})`;
+
+                // Adjust background size and position
+                const sizePercentage = 100 * gridSize;
+                const x = (piece.correctPos % gridSize) * (100 / (gridSize - 1));
+                const y = Math.floor(piece.correctPos / gridSize) * (100 / (gridSize - 1));
+
+                pieceElement.style.backgroundSize = `${sizePercentage}% ${sizePercentage}%`;
+                pieceElement.style.backgroundPosition = `${x}% ${y}%`;
+                pieceElement.style.aspectRatio = "1"; // Keep pieces square
+
+                pieceElement.addEventListener("click", () => handlePieceClick(piece));
+                grid.appendChild(pieceElement);
+            });
+            
+          }
+  
+          function handlePieceClick(clickedPiece) {
+              if (selectedPiece === null) {
+                  selectedPiece = clickedPiece;
+                  renderPuzzle();
+              } else {
+                  if (selectedPiece !== clickedPiece) {
+                      swapPieces(selectedPiece, clickedPiece);
+                      moveCount++;
+                      updateStats();
+                  }
+                  selectedPiece = null;
+                  renderPuzzle();
+                  checkCompletion();
+              }
+          }
+  
+          function swapPieces(pieceA, pieceB) {
+              const tempPos = pieceA.currentPos;
+              pieceA.currentPos = pieceB.currentPos;
+              pieceB.currentPos = tempPos;
+          }
+  
+          function checkCompletion() {
+              const isComplete = pieces.every((piece) => piece.currentPos === piece.correctPos);
+              if (isComplete) {
+                  stopTimer();
+                  const elapsed = Math.floor((Date.now() - startTime) / 1000);
+                  const minutes = Math.floor(elapsed / 60);
+                  const seconds = elapsed % 60;
+                  const timeString = `${minutes}m ${seconds}s`;
+                  
+                  const completeMessage = document.getElementById("completeMessage");
+                  document.getElementById("completionStats").innerHTML = 
+                      `Time: ${timeString}<br>Moves: ${moveCount}`;
+                  completeMessage.style.display = "block";
+              }
+          }
+  
+          function switchImage() {
+              currentImage = (currentImage + 1) % puzzleImages.length;
+              uploadedImage = null;
+              imageAspectRatio = 1;
+              initializePuzzle();
+          }
+  
+          function showDifficultySelector() {
+              document.getElementById('modalOverlay').classList.add('active');
+              document.getElementById('difficultySelector').classList.add('active');
+          }
+  
+          function hideDifficultySelector() {
+              document.getElementById('modalOverlay').classList.remove('active');
+              document.getElementById('difficultySelector').classList.remove('active');
+          }
+  
+          function setDifficulty(size) {
+              gridSize = size;
+              hideDifficultySelector();
+              initializePuzzle();
+          }
+  
+          function uploadImage(event) {
+              const file = event.target.files[0];
+              if (file) {
+                  const reader = new FileReader();
+                  reader.onload = (e) => {
+                      const img = new Image();
+                      img.onload = () => {
+                          uploadedImage = e.target.result;
+                          imageAspectRatio = img.height / img.width;
+                          initializePuzzle();
+                      };
+                      img.src = e.target.result;
+                  };
+                  reader.readAsDataURL(file);
+              }
+          }
+  
+          window.onload = initializePuzzle;
+      </script>
 </body>
 </html>
