--- a/games/j.html
+++ b/games/j.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced Jigsaw Puzzle</title>
+    <title>Responsive Jigsaw Puzzle</title>
     <style>
         * {
             margin: 0;
@@ -12,13 +12,13 @@
         }
 
         body {
-            font-family: system-ui, -apple-system, sans-serif;
+            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            padding: 1rem;
+            background-color: #f9f9f9;
+            padding: 0;
         }
 
         .container {
@@ -27,30 +27,7 @@
             align-items: center;
             gap: 1rem;
             width: 100%;
-            max-width: 800px;
-            background: white;
-            padding: 1.5rem;
-            border-radius: 1rem;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-        }
-
-        .game-header {
-            text-align: center;
-            width: 100%;
-        }
-
-        .game-title {
-            font-size: 2rem;
-            color: #2d3748;
-            margin-bottom: 0.5rem;
-        }
-
-        .game-stats {
-            display: flex;
-            justify-content: space-around;
-            font-size: 1rem;
-            color: #4a5568;
-            width: 100%;
+            max-width: 600px;
         }
 
         .controls {
@@ -61,43 +38,47 @@
             justify-content: center;
         }
 
-        .button, .upload-label {
-            padding: 0.75rem 1rem;
-            color: white;
-            border: none;
-            border-radius: 0.5rem;
-            font-size: 0.9rem;
-            cursor: pointer;
-            transition: all 0.2s;
-            font-weight: 500;
-            text-align: center;
-        }
-
         .button {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            padding: 0.75rem 1rem;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            border-radius: 0.375rem;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
 
         .button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        .upload-label {
-            background: linear-gradient(135deg, #84fab0 0%, #8fd3f4 100%);
+            background-color: #0056b3;
         }
 
         .file-input {
             display: none;
         }
 
+        .upload-label {
+            padding: 0.75rem 1rem;
+            background-color: #28a745;
+            color: #fff;
+            border: none;
+            border-radius: 0.375rem;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .upload-label:hover {
+            background-color: #218838;
+        }
+
         .puzzle-container {
             width: 100%;
-            aspect-ratio: 1;
+            aspect-ratio: 1; /* Ensures the puzzle remains square */
             position: relative;
             overflow: hidden;
-            background: #f7fafc;
-            border-radius: 1rem;
-            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
+            background-color: #ddd;
+            border-radius: 0.5rem;
         }
 
         .puzzle-grid {
@@ -108,160 +89,56 @@
             width: 100%;
             height: 100%;
             gap: 2px;
-            padding: 4px;
         }
 
         .puzzle-piece {
-            background-repeat: no-repeat;
-            background-size: cover;
+            position: relative;
+            background-size: 100%;
             cursor: pointer;
-            transition: all 0.3s;
-            border-radius: 4px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s;
         }
 
-        .puzzle-piece.selected {
-            transform: scale(0.95);
-            box-shadow: 0 0 0 3px #4299e1;
-        }
-
-        .puzzle-piece:hover:not(.selected) {
-            transform: scale(1.02);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        .puzzle-piece:hover {
+            transform: scale(1.05);
         }
 
         .complete-message {
-            color: #2f855a;
+            color: #28a745;
             font-weight: bold;
             text-align: center;
             padding: 1rem;
-            background-color: #c6f6d5;
-            border-radius: 0.75rem;
-            display: none;
-            animation: slideUp 0.5s ease-out;
-        }
-
-        @keyframes slideUp {
-            from {
-                transform: translateY(20px);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        .modal-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
+            background-color: #d4edda;
+            border-radius: 0.375rem;
             width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
             display: none;
-            z-index: 99;
         }
 
-        .modal-overlay.active {
-            display: block;
-        }
-
-        .difficulty-selector {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: white;
-            padding: 1rem;
-            border-radius: 1rem;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-            display: none;
-            flex-direction: column;
-            gap: 1rem;
-            z-index: 100;
-            width: 90%;
-            max-width: 400px;
-        }
-
-        .difficulty-selector.active {
-            display: flex;
-        }
-
-        .difficulty-button {
-            padding: 0.75rem 1rem;
-            border: none;
-            border-radius: 0.5rem;
-            background: #edf2f7;
-            color: #2d3748;
-            cursor: pointer;
-            transition: all 0.2s;
-            text-align: center;
-        }
-
-        .difficulty-button:hover {
-            background: #e2e8f0;
-        }
-
-        @media (max-width: 768px) {
-            .game-title {
-                font-size: 1.5rem;
-            }
-
+        @media (max-width: 480px) {
             .button, .upload-label {
-                padding: 0.6rem 0.9rem;
-                font-size: 0.8rem;
-            }
-
-            .game-stats {
-                flex-direction: column;
-                gap: 0.5rem;
-                font-size: 0.9rem;
-            }
-
-            .puzzle-container {
-                aspect-ratio: 1;
+                font-size: 0.875rem;
+                padding: 0.5rem;
             }
         }
     </style>
 </head>
 <body>
-    <!-- Existing body content -->
-      <div class="container">
-          <div class="game-header">
-              <h1 class="game-title">Jigsaw Puzzle</h1>
-              <div class="game-stats">
-                  <div id="moveCounter">Moves: 0</div>
-                  <div id="timer">Time: 00:00</div>
-              </div>
-          </div>
-  
-          <div class="controls">
-              <button class="button" onclick="initializePuzzle()">New Puzzle</button>
-              <button class="button" onclick="switchImage()">Change Image</button>
-              <button class="button" onclick="showDifficultySelector()">Change Difficulty</button>
-              <label for="fileInput" class="upload-label">Upload Image</label>
-              <input type="file" id="fileInput" class="file-input" accept="image/*" onchange="uploadImage(event)">
-          </div>
-  
-          <div class="puzzle-container">
-              <div class="puzzle-grid" id="puzzleGrid"></div>
-          </div>
-  
-          <div class="complete-message" id="completeMessage">
-              🎉 Congratulations! Puzzle Complete! 🎉
-              <div id="completionStats"></div>
-          </div>
-      </div>
-  
-      <div class="modal-overlay" id="modalOverlay"></div>
-      <div class="difficulty-selector" id="difficultySelector">
-          <button class="difficulty-button" onclick="setDifficulty(2)">Easy (2x2)</button>
-          <button class="difficulty-button" onclick="setDifficulty(3)">Medium (3x3)</button>
-          <button class="difficulty-button" onclick="setDifficulty(4)">Hard (4x4)</button>
-          <button class="difficulty-button" onclick="setDifficulty(5)">Expert (5x5)</button>
-          <button class="difficulty-button" onclick="hideDifficultySelector()">Cancel</button>
-      </div>
+    <div class="container">
+        <div class="controls">
+            <button class="button" onclick="initializePuzzle()">New Puzzle</button>
+            <button class="button" onclick="switchImage()">Change Image</button>
+            <button class="button" onclick="changeGridSize()">Change Grid Size</button>
+            <label for="fileInput" class="upload-label">Upload Image</label>
+            <input type="file" id="fileInput" class="file-input" accept="image/*" onchange="uploadImage(event)">
+        </div>
+
+        <div class="puzzle-container">
+            <div class="puzzle-grid" id="puzzleGrid"></div>
+        </div>
+
+        <div class="complete-message" id="completeMessage">
+            Congratulations! Puzzle Complete! 🎉
+        </div>
+    </div>
 
     <script>
         let gridSize = 4;
