--- a/games/j.html
+++ b/games/j.html
@@ -34,47 +34,45 @@
             display: flex;
             flex-wrap: wrap;
             gap: 0.5rem;
-            width: 100%;
             justify-content: center;
+            width: 100%;
         }
 
-        .button {
+        .button, .upload-label {
             padding: 0.75rem 1rem;
-            background-color: #007BFF;
-            color: #fff;
-            border: none;
             border-radius: 0.375rem;
             font-size: 1rem;
             cursor: pointer;
             transition: background-color 0.3s;
+        }
+
+        .button {
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
         }
 
         .button:hover {
             background-color: #0056b3;
         }
 
-        .file-input {
-            display: none;
-        }
-
         .upload-label {
-            padding: 0.75rem 1rem;
             background-color: #28a745;
             color: #fff;
             border: none;
-            border-radius: 0.375rem;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: background-color 0.3s;
         }
 
         .upload-label:hover {
             background-color: #218838;
         }
 
+        .file-input {
+            display: none;
+        }
+
         .puzzle-container {
             width: 100%;
-            aspect-ratio: 1; /* Ensures the puzzle remains square */
+            aspect-ratio: 1;
             position: relative;
             overflow: hidden;
             background-color: #ddd;
@@ -92,7 +90,6 @@
         }
 
         .puzzle-piece {
-            position: relative;
             background-size: 100%;
             cursor: pointer;
             transition: transform 0.2s;
@@ -103,6 +100,7 @@
         }
 
         .complete-message {
+            display: none;
             color: #28a745;
             font-weight: bold;
             text-align: center;
@@ -110,7 +108,6 @@
             background-color: #d4edda;
             border-radius: 0.375rem;
             width: 100%;
-            display: none;
         }
 
         @media (max-width: 480px) {
@@ -144,7 +141,7 @@
         let gridSize = 4;
         let pieces = [];
         let selectedPiece = null;
-        let currentImage = 0;
+        let currentImageIndex = 0;
 
         const puzzleImages = [
             "https://www.maximumraw.com/games/noahsark.jpeg",
@@ -187,17 +184,16 @@
                 pieceElement.className = "puzzle-piece";
                 pieceElement.style.order = piece.currentPos;
 
-                const imageUrl = uploadedImage || puzzleImages[currentImage];
+                const imageUrl = uploadedImage || puzzleImages[currentImageIndex];
                 pieceElement.style.backgroundImage = `url(${imageUrl})`;
 
-                // Adjust background size and position
                 const sizePercentage = 100 * gridSize;
                 const x = (piece.correctPos % gridSize) * (100 / (gridSize - 1));
                 const y = Math.floor(piece.correctPos / gridSize) * (100 / (gridSize - 1));
 
                 pieceElement.style.backgroundSize = `${sizePercentage}% ${sizePercentage}%`;
                 pieceElement.style.backgroundPosition = `${x}% ${y}%`;
-                pieceElement.style.aspectRatio = "1"; // Keep pieces square
+                pieceElement.style.aspectRatio = "1";
 
                 pieceElement.addEventListener("click", () => handlePieceClick(piece));
                 grid.appendChild(pieceElement);
@@ -229,7 +225,7 @@
         }
 
         function switchImage() {
-            currentImage = (currentImage + 1) % puzzleImages.length;
+            currentImageIndex = (currentImageIndex + 1) % puzzleImages.length;
             uploadedImage = null;
             initializePuzzle();
         }
